API token authentication support for VMware Cloud Director
Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

--- a/addons/csi-vmware-cloud-director/vcloud-basic-auth.yaml
+++ b/addons/csi-vmware-cloud-director/vcloud-basic-auth.yaml
@@ -4,5 +4,6 @@ metadata:
   name: vcloud-basic-auth
   namespace: kube-system
 data:
-  username: {{ required "Please provide VCD_USER" .Credentials.VCD_USER | b64enc }}
-  password: {{ required "Please provide VCD_PASSWORD" .Credentials.VCD_PASSWORD | b64enc }}
+  username: {{ .Credentials.VCD_USER | b64enc }}
+  password: {{ .Credentials.VCD_PASSWORD | b64enc }}
+  refreshToken: {{ .Credentials.VCD_API_TOKEN | b64enc }}
