--- a/.prow/postsubmits.yaml
+++ b/.prow/postsubmits.yaml
@@ -68,7 +68,7 @@ postsubmits:
       containers:
         # This must match the go version used for building, else go will rightfully
         # not use the cache
-        - image: quay.io/kubermatic/kubeone-e2e:v0.1.30
+        - image: quay.io/kubermatic/kubeone-e2e:v0.1.31-go-1.19.8
           command:
             - ./hack/ci/upload-gocache.sh
           resources:
@@ -87,7 +87,7 @@ postsubmits:
       containers:
         # This must match the go version used for building, else go will rightfully
         # not use the cache
-        - image: quay.io/kubermatic/kubeone-e2e:v0.1.30
+        - image: quay.io/kubermatic/kubeone-e2e:v0.1.31-go-1.19.8
           command:
             - ./hack/ci/upload-gocache.sh
           env:
