--- a/addons/unattended-upgrades/yum.yaml
+++ b/addons/unattended-upgrades/yum.yaml
@@ -27,6 +27,7 @@ spec:
                 - centos
                 - rhel
                 - rockylinux
+                - ol
             - matchExpressions:
               - key: v1.kubeone.io/operating-system
                 operator: In
@@ -35,6 +36,7 @@ spec:
                 - centos
                 - rhel
                 - rockylinux
+                - ol
       tolerations:
       - key: node-role.kubernetes.io/control-plane
         effect: NoSchedule
@@ -69,7 +71,7 @@ spec:
               sed -i 's/update_cmd = default/update_cmd = security/' /etc/yum/yum-cron.conf
               systemctl enable --now yum-cron
               ;;
-            centos8 | rhel8* | rocky8*)
+            centos8 | rhel8* | rocky8* | ol8*)
               dnf install -y dnf-automatic
               sed -i 's/apply_updates = no/apply_updates = yes/' /etc/dnf/automatic.conf
               sed -i 's/upgrade_type = default/upgrade_type = security/' /etc/dnf/automatic.conf
