Replace kubeone-e2e with build image and update Go to 1.20.4 (#2783)
* Remove kubeone-e2e image

Signed-off-by: Marko Mudrinić <mudrinic.mare@gmail.com>

* Replace kubeone-e2e with build image and update Go

Signed-off-by: Marko Mudrinić <mudrinic.mare@gmail.com>

---------

Signed-off-by: Marko Mudrinić <mudrinic.mare@gmail.com>

--- a/.prow/postsubmits.yaml
+++ b/.prow/postsubmits.yaml
@@ -1,34 +1,4 @@
 postsubmits:
-  - name: post-kubeone-push-e2e-image
-    run_if_changed: "(hack/images/kubeone-e2e)"
-    clone_uri: "ssh://git@github.com/kubermatic/kubeone.git"
-    decorate: true
-    reporter_config:
-      slack:
-        channel: dev-kubeone
-    branches:
-      - ^main$
-    labels:
-      preset-docker-push-kubermatic: "true"
-    spec:
-      containers:
-        - image: quay.io/kubermatic/build:go-1.20-node-18-kind-0.17-4
-          command:
-            - /bin/bash
-            - -c
-            - |
-              set -euo pipefail
-              start-docker.sh
-              docker login -u "$QUAY_IO_USERNAME" -p "$QUAY_IO_PASSWORD" quay.io
-              cd ./hack/images/kubeone-e2e
-              ./release.sh
-          # docker-in-docker needs privileged mode
-          securityContext:
-            privileged: true
-          resources:
-            requests:
-              cpu: 100m
-              memory: 1Gi
   - name: post-kubeone-push-image
     clone_uri: "ssh://git@github.com/kubermatic/kubeone.git"
     decorate: true
@@ -44,7 +14,7 @@ postsubmits:
       preset-docker-mirror: "true"
     spec:
       containers:
-        - image: quay.io/kubermatic/build:go-1.20-node-18-kind-0.17-4
+        - image: quay.io/kubermatic/build:go-1.20-node-18-kind-0.18-4
           command:
             - /bin/bash
             - -c
@@ -68,7 +38,7 @@ postsubmits:
       containers:
         # This must match the go version used for building, else go will rightfully
         # not use the cache
-        - image: quay.io/kubermatic/kubeone-e2e:v0.1.32
+        - image: quay.io/kubermatic/build:go-1.20-node-18-4
           command:
             - ./hack/ci/upload-gocache.sh
           resources:
@@ -87,7 +57,7 @@ postsubmits:
       containers:
         # This must match the go version used for building, else go will rightfully
         # not use the cache
-        - image: quay.io/kubermatic/kubeone-e2e:v0.1.32
+        - image: quay.io/kubermatic/build:go-1.20-node-18-4
           command:
             - ./hack/ci/upload-gocache.sh
           env:
