--- a/addons/machinecontroller/webhook.yaml
+++ b/addons/machinecontroller/webhook.yaml
@@ -88,7 +88,7 @@ spec:
             - -listen-address=0.0.0.0:9876
             - -namespace=kube-system
             - -tls-cert-path=/tmp/cert/cert.pem
-            - -tls-key-path=/tmp/cert/tls.key
+            - -tls-key-path=/tmp/cert/key.pem
             {{ if .Config.CloudProvider.External }}
             - -node-external-cloud-provider
             {{ end }}
