Explicitly configure TLS cert path for machine-controller webhooks (#2787)
* Explicitly configure TLS cert path for machine-controller webhooks

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Refactored code

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

* Remove flags used with klog for machine-controller

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

---------

Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

--- a/addons/machinecontroller/webhook.yaml
+++ b/addons/machinecontroller/webhook.yaml
@@ -83,10 +83,10 @@ spec:
           command:
             - /usr/local/bin/webhook
           args:
-            - -logtostderr
-            - -v=4
             - -listen-address=0.0.0.0:9876
             - -namespace=kube-system
+            - -tls-cert-path=/tmp/cert/cert.pem
+            - -tls-key-path=/tmp/cert/key.pem
             {{ if .Config.CloudProvider.External }}
             - -node-external-cloud-provider
             {{ end }}
