--- a/test/tests.yml
+++ b/test/tests.yml
@@ -1,5 +1,5 @@
 - scenario: install_containerd
-  initVersion: v1.24.10
+  initVersion: v1.24.15
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -24,7 +24,7 @@
     - name: vsphere_flatcar
 
 - scenario: install_containerd
-  initVersion: v1.25.6
+  initVersion: v1.25.11
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -49,7 +49,32 @@
     - name: vsphere_flatcar
 
 - scenario: install_containerd
-  initVersion: v1.26.1
+  initVersion: v1.26.6
+  infrastructures:
+    - name: aws_amzn
+    - name: aws_centos
+    - name: aws_default
+      runIfChanged: "(.prow/|addons/|examples/|hack/|pkg/|test/)"
+    - name: aws_flatcar
+    - name: aws_rhel
+    - name: aws_rockylinux
+    - name: azure_default
+    - name: azure_centos
+    - name: azure_flatcar
+    - name: azure_rhel
+    - name: azure_rockylinux
+    - name: gce_default
+    - name: openstack_default
+    - name: openstack_centos
+    - name: openstack_rockylinux
+    - name: openstack_rhel
+    - name: openstack_flatcar
+    - name: vsphere_default
+    - name: vsphere_centos
+    - name: vsphere_flatcar
+
+- scenario: install_containerd
+  initVersion: v1.27.3
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -74,8 +99,8 @@
     - name: vsphere_flatcar
 
 - scenario: upgrade_containerd
-  initVersion: v1.25.6
-  upgradedVersion: v1.26.1
+  initVersion: v1.26.6
+  upgradedVersion: v1.27.3
   initKubeOneVersion: "main"
   infrastructures:
     - name: aws_amzn_stable
@@ -100,8 +125,34 @@
     - name: vsphere_flatcar_stable
 
 - scenario: upgrade_containerd
-  initVersion: v1.24.10
-  upgradedVersion: v1.25.6
+  initVersion: v1.25.11
+  upgradedVersion: v1.26.6
+  initKubeOneVersion: "main"
+  infrastructures:
+    - name: aws_amzn_stable
+    - name: aws_centos_stable
+    - name: aws_default_stable
+    - name: aws_flatcar_stable
+    - name: aws_rhel_stable
+    - name: aws_rockylinux_stable
+    - name: azure_default_stable
+    - name: azure_centos_stable
+    - name: azure_flatcar_stable
+    - name: azure_rhel_stable
+    - name: azure_rockylinux_stable
+    - name: gce_default_stable
+    - name: openstack_default_stable
+    - name: openstack_centos_stable
+    - name: openstack_rockylinux_stable
+    - name: openstack_rhel_stable
+    - name: openstack_flatcar_stable
+    - name: vsphere_default_stable
+    - name: vsphere_centos_stable
+    - name: vsphere_flatcar_stable
+
+- scenario: upgrade_containerd
+  initVersion: v1.24.15
+  upgradedVersion: v1.25.11
   infrastructures:
     - name: aws_amzn_stable
     - name: aws_centos_stable
@@ -125,7 +176,7 @@
     - name: vsphere_flatcar_stable
 
 - scenario: calico_containerd
-  initVersion: v1.26.1
+  initVersion: v1.27.3
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -149,7 +200,7 @@
     - name: vsphere_flatcar
 
 - scenario: weave_containerd
-  initVersion: v1.26.1
+  initVersion: v1.27.3
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -173,7 +224,7 @@
     - name: vsphere_flatcar
 
 - scenario: cilium_containerd
-  initVersion: v1.26.1
+  initVersion: v1.27.3
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -197,42 +248,52 @@
     - name: vsphere_flatcar
 
 - scenario: conformance_containerd
-  initVersion: v1.24.10
+  initVersion: v1.24.15
   infrastructures:
     - name: aws_long_timeout_default
 
 - scenario: conformance_containerd
-  initVersion: v1.25.6
+  initVersion: v1.25.11
   infrastructures:
     - name: aws_long_timeout_default
 
 - scenario: conformance_containerd
-  initVersion: v1.26.1
+  initVersion: v1.26.6
+  infrastructures:
+    - name: aws_long_timeout_default
+
+- scenario: conformance_containerd
+  initVersion: v1.27.3
   infrastructures:
     - name: aws_long_timeout_default
 
 - scenario: conformance_containerd_external
-  initVersion: v1.24.10
+  initVersion: v1.24.15
   infrastructures:
     - name: aws_long_timeout_default
 
 - scenario: conformance_containerd_external
-  initVersion: v1.25.6
+  initVersion: v1.25.11
   infrastructures:
     - name: aws_long_timeout_default
 
 - scenario: conformance_containerd_external
-  initVersion: v1.26.1
+  initVersion: v1.26.6
+  infrastructures:
+    - name: aws_long_timeout_default
+
+- scenario: conformance_containerd_external
+  initVersion: v1.27.3
   infrastructures:
     - name: aws_long_timeout_default
 
 - scenario: kube_proxy_ipvs
-  initVersion: v1.26.1
+  initVersion: v1.27.3
   infrastructures:
     - name: aws_default
 
 - scenario: legacy_machine_controller_containerd
-  initVersion: v1.24.10
+  initVersion: v1.24.15
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -256,7 +317,7 @@
     - name: vsphere_flatcar
 
 - scenario: legacy_machine_controller_containerd
-  initVersion: v1.25.6
+  initVersion: v1.25.11
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -280,7 +341,31 @@
     - name: vsphere_flatcar
 
 - scenario: legacy_machine_controller_containerd
-  initVersion: v1.26.1
+  initVersion: v1.26.6
+  infrastructures:
+    - name: aws_amzn
+    - name: aws_centos
+    - name: aws_default
+    - name: aws_flatcar
+    - name: aws_rhel
+    - name: aws_rockylinux
+    - name: azure_default
+    - name: azure_centos
+    - name: azure_flatcar
+    - name: azure_rhel
+    - name: azure_rockylinux
+    - name: gce_default
+    - name: openstack_default
+    - name: openstack_centos
+    - name: openstack_rockylinux
+    - name: openstack_rhel
+    - name: openstack_flatcar
+    - name: vsphere_default
+    - name: vsphere_centos
+    - name: vsphere_flatcar
+
+- scenario: legacy_machine_controller_containerd
+  initVersion: v1.27.3
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -304,7 +389,7 @@
     - name: vsphere_flatcar
 
 - scenario: csi_ccm_migration
-  initVersion: v1.24.10
+  initVersion: v1.24.15
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -327,7 +412,7 @@
     - name: vsphere_flatcar
 
 - scenario: csi_ccm_migration
-  initVersion: v1.25.6
+  initVersion: v1.25.11
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -350,7 +435,30 @@
     - name: vsphere_flatcar
 
 - scenario: csi_ccm_migration
-  initVersion: v1.26.1
+  initVersion: v1.26.6
+  infrastructures:
+    - name: aws_amzn
+    - name: aws_centos
+    - name: aws_default
+    - name: aws_flatcar
+    - name: aws_rhel
+    - name: aws_rockylinux
+    - name: openstack_default
+    - name: openstack_centos
+    - name: openstack_rockylinux
+    - name: openstack_rhel
+    - name: openstack_flatcar
+    - name: azure_default
+    - name: azure_centos
+    - name: azure_flatcar
+    - name: azure_rhel
+    - name: azure_rockylinux
+    - name: vsphere_default
+    - name: vsphere_centos
+    - name: vsphere_flatcar
+
+- scenario: csi_ccm_migration
+  initVersion: v1.27.3
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -373,7 +481,7 @@
     - name: vsphere_flatcar
 
 - scenario: install_containerd_external
-  initVersion: v1.24.10
+  initVersion: v1.24.15
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -406,7 +514,7 @@
     - name: vsphere_flatcar
 
 - scenario: install_containerd_external
-  initVersion: v1.25.6
+  initVersion: v1.25.11
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -439,7 +547,40 @@
     - name: vsphere_flatcar
 
 - scenario: install_containerd_external
-  initVersion: v1.26.1
+  initVersion: v1.26.6
+  infrastructures:
+    - name: aws_amzn
+    - name: aws_centos
+    - name: aws_default
+    - name: aws_flatcar
+    - name: aws_rhel
+    - name: aws_rockylinux
+    - name: azure_default
+    - name: azure_centos
+    - name: azure_flatcar
+    - name: azure_rhel
+    - name: azure_rockylinux
+    - name: digitalocean_default
+    - name: digitalocean_centos
+    - name: digitalocean_rockylinux
+    - name: equinixmetal_default
+    - name: equinixmetal_centos
+    - name: equinixmetal_rockylinux
+    - name: equinixmetal_flatcar
+    - name: hetzner_default
+    - name: hetzner_centos
+    - name: hetzner_rockylinux
+    - name: openstack_default
+    - name: openstack_centos
+    - name: openstack_rockylinux
+    - name: openstack_rhel
+    - name: openstack_flatcar
+    - name: vsphere_default
+    - name: vsphere_centos
+    - name: vsphere_flatcar
+
+- scenario: install_containerd_external
+  initVersion: v1.27.3
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -472,8 +613,8 @@
     - name: vsphere_flatcar
 
 - scenario: upgrade_containerd_external
-  initVersion: v1.24.10
-  upgradedVersion: v1.25.6
+  initVersion: v1.24.15
+  upgradedVersion: v1.25.11
   infrastructures:
     - name: aws_amzn_stable
     - name: aws_centos_stable
@@ -506,8 +647,43 @@
     - name: vsphere_flatcar_stable
 
 - scenario: upgrade_containerd_external
-  initVersion: v1.25.6
-  upgradedVersion: v1.26.1
+  initVersion: v1.25.11
+  upgradedVersion: v1.26.6
+  initKubeOneVersion: "main"
+  infrastructures:
+    - name: aws_amzn_stable
+    - name: aws_centos_stable
+    - name: aws_default_stable
+    - name: aws_flatcar_stable
+    - name: aws_rhel_stable
+    - name: aws_rockylinux_stable
+    - name: azure_default_stable
+    - name: azure_centos_stable
+    - name: azure_flatcar_stable
+    - name: azure_rhel_stable
+    - name: azure_rockylinux_stable
+    - name: digitalocean_default_stable
+    - name: digitalocean_centos_stable
+    - name: digitalocean_rockylinux_stable
+    - name: equinixmetal_default_stable
+    - name: equinixmetal_centos_stable
+    - name: equinixmetal_rockylinux_stable
+    - name: equinixmetal_flatcar_stable
+    - name: hetzner_default_stable
+    - name: hetzner_centos_stable
+    - name: hetzner_rockylinux_stable
+    - name: openstack_default_stable
+    - name: openstack_centos_stable
+    - name: openstack_rockylinux_stable
+    - name: openstack_rhel_stable
+    - name: openstack_flatcar_stable
+    - name: vsphere_default_stable
+    - name: vsphere_centos_stable
+    - name: vsphere_flatcar_stable
+
+- scenario: upgrade_containerd_external
+  initVersion: v1.26.6
+  upgradedVersion: v1.27.3
   initKubeOneVersion: "main"
   infrastructures:
     - name: aws_amzn_stable
@@ -541,7 +717,7 @@
     - name: vsphere_flatcar_stable
 
 - scenario: legacy_machine_controller_containerd_external
-  initVersion: v1.24.10
+  initVersion: v1.24.15
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -574,7 +750,7 @@
     - name: vsphere_flatcar
 
 - scenario: legacy_machine_controller_containerd_external
-  initVersion: v1.25.6
+  initVersion: v1.25.11
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
@@ -607,7 +783,40 @@
     - name: vsphere_flatcar
 
 - scenario: legacy_machine_controller_containerd_external
-  initVersion: v1.26.1
+  initVersion: v1.26.6
+  infrastructures:
+    - name: aws_amzn
+    - name: aws_centos
+    - name: aws_default
+    - name: aws_flatcar
+    - name: aws_rhel
+    - name: aws_rockylinux
+    - name: azure_default
+    - name: azure_centos
+    - name: azure_flatcar
+    - name: azure_rhel
+    - name: azure_rockylinux
+    - name: digitalocean_default
+    - name: digitalocean_centos
+    - name: digitalocean_rockylinux
+    - name: equinixmetal_default
+    - name: equinixmetal_centos
+    - name: equinixmetal_rockylinux
+    - name: equinixmetal_flatcar
+    - name: hetzner_default
+    - name: hetzner_centos
+    - name: hetzner_rockylinux
+    - name: openstack_default
+    - name: openstack_centos
+    - name: openstack_rockylinux
+    - name: openstack_rhel
+    - name: openstack_flatcar
+    - name: vsphere_default
+    - name: vsphere_centos
+    - name: vsphere_flatcar
+
+- scenario: legacy_machine_controller_containerd_external
+  initVersion: v1.27.3
   infrastructures:
     - name: aws_amzn
     - name: aws_centos
