Drop support for AWS with in-tree cloud provider and 1.27
Signed-off-by: Marko Mudrinić <mudrinic.mare@gmail.com>

--- a/test/e2e/testdata/containerd_calico_external.yaml
+++ b/test/e2e/testdata/containerd_calico_external.yaml
@@ -8,11 +8,14 @@ containerRuntime:
   containerd: {}
 
 clusterNetwork:
-  kubeProxy:
-    ipvs:
-      scheduler: sed
+  cni:
+    external: {}
+
+cloudProvider:
+  external: true
 
 addons:
   enable: true
   addons:
   - name: default-storage-class
+  - name: calico-vxlan
