--- a/addons/ccm-openstack/ccm-openstack.yaml
+++ b/addons/ccm-openstack/ccm-openstack.yaml
@@ -1,16 +1,18 @@
 ---
+# Source: openstack-cloud-controller-manager/templates/serviceaccount.yaml
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: cloud-controller-manager
+  name: openstack-cloud-controller-manager
   namespace: kube-system
+  annotations:
 ---
+# Source: openstack-cloud-controller-manager/templates/clusterrole.yaml
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: system:cloud-controller-manager
+  name: system:openstack-cloud-controller-manager
   annotations:
-    rbac.authorization.kubernetes.io/autoupdate: "true"
 rules:
 - apiGroups:
   - coordination.k8s.io
@@ -52,16 +54,22 @@ rules:
 - apiGroups:
   - ""
   resources:
-  - serviceaccounts
+  - services/status
   verbs:
-  - create
-  - get
+  - patch
 - apiGroups:
   - ""
   resources:
   - serviceaccounts/token
   verbs:
   - create
+- apiGroups:
+  - ""
+  resources:
+  - serviceaccounts
+  verbs:
+  - create
+  - get
 - apiGroups:
   - ""
   resources:
@@ -95,69 +103,40 @@ rules:
   - get
   - watch
 ---
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:
-  name: system:cloud-node-controller
-rules:
-- apiGroups:
-  - ""
-  resources:
-  - nodes
-  verbs:
-  - '*'
-- apiGroups:
-  - ""
-  resources:
-  - nodes/status
-  verbs:
-  - patch
-- apiGroups:
-  - ""
-  resources:
-  - events
-  verbs:
-  - create
-  - patch
-  - update
----
+# Source: openstack-cloud-controller-manager/templates/clusterrolebinding.yaml
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: system:cloud-controller-manager
+  name: system:openstack-cloud-controller-manager
+  annotations:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: system:cloud-controller-manager
+  name: system:openstack-cloud-controller-manager
 subjects:
 - kind: ServiceAccount
-  name: cloud-controller-manager
-  namespace: kube-system
+  name: openstack-cloud-controller-manager
+  namespace: "kube-system"
 ---
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
-metadata:
-  name: system:cloud-node-controller
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: system:cloud-node-controller
-subjects:
-- kind: ServiceAccount
-  name: cloud-node-controller
-  namespace: kube-system
----
+# Source: openstack-cloud-controller-manager/templates/daemonset.yaml
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   name: openstack-cloud-controller-manager
   namespace: kube-system
   labels:
-    k8s-app: "openstack-cloud-controller-manager"
+    app.kubernetes.io/name: openstack-cloud-controller-manager
+    helm.sh/chart: openstack-cloud-controller-manager-2.27.1
+    app.kubernetes.io/instance: openstack-ccm
+    app.kubernetes.io/version: "v1.27.1"
+    app.kubernetes.io/managed-by: Helm
+  annotations:
 spec:
   selector:
     matchLabels:
-      k8s-app: "openstack-cloud-controller-manager"
+      component: controllermanager
+      app: openstack-cloud-controller-manager
+      release: openstack-ccm
   updateStrategy:
     type: RollingUpdate
   template:
@@ -166,40 +145,31 @@ spec:
         "kubeone.k8c.io/cabundle-hash": "{{ .Config.CABundle | sha256sum }}"
         "kubeone.k8c.io/cloudconfig-hash": "{{ .Config.CloudProvider.CloudConfig | sha256sum }}"
       labels:
-        k8s-app: "openstack-cloud-controller-manager"
+        component: controllermanager
+        app: openstack-cloud-controller-manager
+        release: openstack-ccm
+        chart: openstack-cloud-controller-manager-2.27.1
+        heritage: Helm
     spec:
-      priorityClassName: system-cluster-critical
-      nodeSelector:
-        node-role.kubernetes.io/control-plane: ""
       securityContext:
         runAsUser: 1001
-      tolerations:
-        - key: "node.cloudprovider.kubernetes.io/uninitialized"
-          value: "true"
-          effect: "NoSchedule"
-        - key: "node-role.kubernetes.io/master"
-          effect: NoSchedule
-        - key: "node-role.kubernetes.io/control-plane"
-          effect: NoSchedule
-      serviceAccountName: cloud-controller-manager
+      serviceAccountName: openstack-cloud-controller-manager
       containers:
         - name: openstack-cloud-controller-manager
           image: {{ .InternalImages.Get "OpenstackCCM" }}
-          command:
+          args:
             - /bin/openstack-cloud-controller-manager
             - --v=1
-            - --cloud-config=/etc/config/cloud-config
+            - --cloud-config=$(CLOUD_CONFIG)
+            - --cluster-name=$(CLUSTER_NAME)
             - --cloud-provider=openstack
             - --use-service-account-credentials=true
+            - --controllers=cloud-node,cloud-node-lifecycle,route,service
             - --bind-address=127.0.0.1
-            {{ if .CCMClusterName }}
-            - --cluster-name={{ .CCMClusterName }}
-            {{ end }}
-{{ if .Config.CABundle }}
-          env:
-{{ caBundleEnvVar | indent 12 }}
-{{ end }}
           volumeMounts:
+            - mountPath: /etc/config
+              name: cloud-config-volume
+              readOnly: true
             - mountPath: /etc/kubernetes/pki
               name: k8s-certs
               readOnly: true
@@ -212,36 +182,37 @@ spec:
             - mountPath: /usr/share/ca-certificates
               name: usr-ca-certs
               readOnly: true
-            - mountPath: /etc/config
-              name: cloud-config-volume
-              readOnly: true
+          env:
+            - name: CLOUD_CONFIG
+              value: /etc/config/cloud-conf
+            - name: CLUSTER_NAME
+              value: {{ default "kubernetes" .CCMClusterName }}
 {{ if .Config.CABundle }}
-{{ caBundleVolumeMount | indent 12 }}
+{{ caBundleEnvVar | indent 12 }}
 {{ end }}
-          resources:
-            requests:
-              cpu: 200m
       hostNetwork: true
+      priorityClassName: "system-cluster-critical"
       volumes:
-      - name: k8s-certs
-        hostPath:
+      - name: cloud-config-volume
+        secret:
+          secretName: cloud-config
+
+      - hostPath:
           path: /etc/kubernetes/pki
           type: DirectoryOrCreate
-      - name: ca-certs
-        hostPath:
+        name: k8s-certs
+      - hostPath:
           path: /etc/ssl/certs
           type: DirectoryOrCreate
-      - name: pki-certs
-        hostPath:
+        name: ca-certs
+      - hostPath:
           path: /etc/pki
           type: DirectoryOrCreate
+        name: pki-certs
       - hostPath:
           path: /usr/share/ca-certificates
           type: DirectoryOrCreate
         name: usr-ca-certs
-      - name: cloud-config-volume
-        secret:
-          secretName: cloud-config
 {{ if .Config.CABundle }}
 {{ caBundleVolume | indent 6 }}
 {{ end }}
